<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/your_name"
            android:layout_margin="10dp"
            android:textSize="@dimen/size12"

            android:background="@drawable/textbx"
            android:gravity="center_vertical|center|center_horizontal" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_margin="10dp"
            android:textSize="@dimen/size12"
            android:background="@drawable/textbx"
            android:gravity="center_vertical|center|center_horizontal"  />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:textSize="@dimen/size12"
            android:background="@drawable/textbx"
            android:gravity="center_vertical|center|center_horizontal"  />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:textSize="@dimen/size12"
            android:background="@drawable/textbx"
            android:gravity="center_vertical|center|center_horizontal" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:textSize="@dimen/size12"
            android:background="@drawable/textbx"
            android:gravity="center_vertical|center|center_horizontal"  />

    </LinearLayout>


</RelativeLayout>
