<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/filter_1"
            android:gravity="left"
            android:layout_gravity="left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business_owner"
            android:layout_margin="10dp"
            android:textSize="@dimen/size15"
            android:textColor="@color/gray_light"
            android:gravity="center_horizontal|right" />

     </LinearLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:textColor="@color/im_looking_for"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/size15"
                android:textColor="@color/black"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="@dimen/size15"
                android:textColor="@color/im_looking_for"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/size15"
                android:textColor="@color/black"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="0dp"
            layout="@layout/arc_like_a_path"></include>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="0dp"
            layout="@layout/wheel_view"></include>


        <!--<FrameLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hello_world" />
        </FrameLayout>-->
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/im_looking_for"
            android:textSize="@dimen/size18"
            android:textColor="@color/im_looking_for"
            android:gravity="center_horizontal" />
        <com.sms.within30.lib.ClearableAutoCompleteTextView
            android:id="@+id/autoCompleted_categorysearch"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/textView1"
            android:background="@drawable/search_box"
            android:layout_marginTop="20dp"
            android:ems="2"
            android:textSize="@dimen/size13"
            android:imeOptions="actionSearch"
            android:hint="@string/category"
            android:drawablePadding="5dp"
            android:gravity="center|center_horizontal" />


    </LinearLayout>

</RelativeLayout>
