<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<View
                android:layout_width="match_parent"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@color/im_looking_for"
                android:layout_height="1dp"/>-->

            <ImageView
                android:layout_width="125dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo"/>

            <TextView
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="@string/register"
                android:textSize="@dimen/size25"
                android:textColor="@color/black"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/btuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:padding="15dp"
                    android:textAllCaps="false"
                    android:textSize="@dimen/size20"
                    android:background="@color/im_looking_for"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:layout_gravity="center" />
                <Button
                    android:id="@+id/btregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"
                    android:textSize="@dimen/size20"

                    android:textAllCaps="false"
                    android:background="@color/im_looking_for"
                    android:textColor="@color/white"
                    android:padding="15dp"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:layout_gravity="center" />
                </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="@string/account_details"
                android:textSize="@dimen/size20"
                android:textColor="@color/black"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/ll_register_business1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">
                <include
                    android:id="@+id/register_business1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    layout="@layout/register_business1"></include>

                </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_register_business2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <include

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    layout="@layout/register_business2"></include>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

            </LinearLayout>



            <TextView
                android:id="@+id/tvpagenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/onebyfour"
                android:textSize="@dimen/size20"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/im_looking_for"

                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="@dimen/size20"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                android:background="@color/im_looking_for"
                android:textColor="@color/white"
                android:gravity="center_vertical|center|center_horizontal"
                android:layout_gravity="center"
                android:padding="5dp"/>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
